fix: hero background overflow

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -5,7 +5,11 @@
 
 .heroBanner {
   padding: 0;
-  /* padding-bottom: 1rem; */
+
+  /* hack to fix background color overflowing the wave background image */
+  padding-bottom: 1px;
+  padding-right: 1px;
+
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -16,20 +20,11 @@
   background-position: bottom;
   background-size: cover;
   background-clip: content-box;
-  min-height: 800px;
+  min-height: 700px;
 }
 
 .container {
-  margin-top: 14rem;
-}
-
-@media screen and (max-width: 1500px) {
-  .heroBanner {
-    min-height: 700px;
-  }
-  .container {
-    margin-top: 12rem;
-  }
+  margin-top: 12rem;
 }
 
 @media screen and (max-width: 1200px) {
